Update Основные настройки ОС.md

--- a/lectures/Основные настройки ОС.md
+++ b/lectures/Основные настройки ОС.md
@@ -1,7 +1,7 @@
 # Основные настройки ОС
 
 
-После первоначальной установки ОС, зачастую могут потребоваться дополнительные настройки. 
+После первоначальной установки ОС, зачастую могут потребоваться **дополнительные настройки**. 
 К ним могут относиться настройки окружения (оформление системы, установка предпочитаемых приложений и т.д), а также общесистемные настройки.
 
 
@@ -9,18 +9,19 @@
 
 Во-первых, необходимо настроить подключение к сети. 
 
-В домашней сети с уже настроенным маршрутизатором дополнительных настроек зачастую производить не нужно - все необходимые настройки современная ОС сама попытается получить по протоколу динамической настройки DHCP. 
-Если же этого не произошло по тем или иным причинам, сеть придётся настраивать вручную. В данном случае рассмотрим вариант подключения по сети Ethernet через стек протоколов TCP/IP.
+В домашней сети с уже настроенным маршрутизатором дополнительных настроек зачастую производить не нужно - все необходимые настройки современная ОС сама попытается получить по протоколу динамической настройки *DHCP*. 
+Если же этого не произошло по тем или иным причинам, сеть придётся настраивать вручную. В данном случае рассмотрим вариант подключения по сети *Ethernet* через стек протоколов *TCP/IP*.
 
-Обязательных настроек для подключения к сети Ethernet нет. Сетевая карта имеет установленный на заводе MAC адрес и драйвер берёт на себя всю работу по преобразованию данных. 
+Обязательных настроек для подключения к сети Ethernet нет. Сетевая карта имеет установленный на заводе *MAC* адрес и драйвер берёт на себя всю работу по преобразованию данных. 
 Конечно, присутствует и возможность изменить MAC адрес в настройках сетевой карты, но это действие нужно производить, только в случаях, когда это действительно необходимо,
 так как наличие двух одинаковых MAC адресов в сети может вызвать перебои в её работе.
 
-Для работы в IP сети необходимо настроить IP адрес, маску подсети, шлюз по умолчанию и DNS сервера.
+Для работы в IP сети необходимо настроить *IP адрес*, *маску подсети*, *шлюз по умолчанию* и *DNS сервера*.
 
-IP Адрес необходим для уникальной идентификации компьютера при передачи ему информации.
-Маска подсети определяет группу компьютеров, которым можно обращаться непосредственно
-DNS сервера используются для упрощения работы с адресами компьютеров и адресов сетевых служб
+- IP Адрес необходим для уникальной идентификации компьютера при передачи ему информации.
+- Маска подсети определяет группу компьютеров, которым можно обращаться непосредственно
+- DNS сервера используются для упрощения работы с адресами компьютеров и адресов сетевых служб
+
 Так же важной настройкой для работы сети является Имя Компьютера. Она используется для настройки служб сети на самом компьютере
 и должна совпадать с его именем, прописанным в DNS (это конечно не является обязательным, но может привести к путанице в крупных сетях).
 
@@ -31,11 +32,13 @@
 (Debian/Ubuntu, Red Hat, Mint, Astra Linux и т.д.) и между ними имеются некоторые различия)
 
 Для проверки и тестирования сети существуют различные команды:
-Для Linux: ping, tracert, nslookup
-Для Windows: ping, traceroute, nslookup
+
+Для **Linux**: ping, tracert, nslookup
+
+Для **Windows**: ping, traceroute, nslookup
 
 
 ## Настройка локальных пользователей
 
-Windows - GUI и глобальные права, распределение прав доступа к файловой системе (ACL)
-Linux - консоль, распределение прав доступа (ACL и стандартные), глобальные права.
+**Windows** - графический интерфейс и глобальные права, распределение прав доступа к файловой системе (ACL)
+**Linux** - консоль, распределение прав доступа (ACL и стандартные), глобальные права.
