Update Основные настройки ОС.md

--- a/lectures/Основные настройки ОС.md
+++ b/lectures/Основные настройки ОС.md
@@ -22,12 +22,12 @@
 - Маска подсети определяет группу компьютеров, которым можно обращаться непосредственно
 - DNS сервера используются для упрощения работы с адресами компьютеров и адресов сетевых служб
 
-Так же важной настройкой для работы сети является Имя Компьютера. Она используется для настройки служб сети на самом компьютере
+Так же важной настройкой для работы сети является **Имя Компьютера**. Она используется для настройки служб сети на самом компьютере
 и должна совпадать с его именем, прописанным в DNS (это конечно не является обязательным, но может привести к путанице в крупных сетях).
 
-Настройку систем Windows можно провести используя средства графического интерфейса или команды powershell.
+Настройку систем Windows можно провести используя средства графического интерфейса или команды **powershell**.
 
-В системах семейства Linux, можно использовать графический интерфейс для Network Manager или аналогичные ему консольные команды
+В системах семейства Linux, можно использовать графический интерфейс для **Network Manager** или аналогичные ему консольные команды
 и псевдографики в консоли или использовать конфигурационные файлы (не является универсальным способом, так как существует множество дистрибутивов Linux 
 (Debian/Ubuntu, Red Hat, Mint, Astra Linux и т.д.) и между ними имеются некоторые различия)
 
