Update Стандарты на расположение каталогов файловой системы.md

--- a/lectures/Стандарты на расположение каталогов файловой системы.md
+++ b/lectures/Стандарты на расположение каталогов файловой системы.md
@@ -21,7 +21,8 @@
 
 ## Linux
 В системах семейства Linux существуют правила структуры каталогов и расположения файлов программ, которых по большей части придерживаются все дистрибутивы. 
-Замечание: В системах Linux, в отличие от Windows, большие и маленькие буквы - отличаются!
+
+**Замечание**: В системах Linux, в отличие от Windows, большие и маленькие буквы - отличаются!
 
 - `/bin` - каталог с исполняемыми файлами основных утилит
 - `/usr/bin` и `/sbin` - используются для хранения исполняемых файлов системных утилит
