Update Стандарты на расположение каталогов файловой системы.md

--- a/lectures/Стандарты на расположение каталогов файловой системы.md
+++ b/lectures/Стандарты на расположение каталогов файловой системы.md
@@ -42,4 +42,4 @@
 Выше перечисленные каталоги хранят обычные файлы, но кроме них существуют и каталоги содержащие специальные файлы:
 `/dev` - файлы устройств
 `/proc` - файлы, соответствующие процессам и текущим настройкам ядра
-`/sys` -  используется для доступа к ресурсам ядра
+`/sys` -  используется для доступа к ресурсам ядра.
