Update Работа с сетевыми дисками.md

--- a/lectures/Работа с сетевыми дисками.md
+++ b/lectures/Работа с сетевыми дисками.md
@@ -18,8 +18,8 @@
 Все необходимые компоненты для работы сетевых дисков устанавливаются в Windows Server вместе с операционной системой. 
 
 Для создания сетевых дисков можно воспользоваться двумя путями:
-- использование контекстного меню на имени папки
-- использование Server Manager
+- использование **контекстного меню** на имени папки
+- использование **Server Manager**
 
 В обоих случаях нужно заранее определиться, какой каталог файловой системы будет экспортирвоаться как общий по сети и как его будут видеть пользователи (какое он будет иметь внешнее имя).
 При использовании контекстного меню необходимо найти папку, которую хочется превратить в сетевой диск, щёлкнуть на ней правой кнопкой мыши и выбрать пункт "**свойства**" (**properties**). В одной из вкладок будет доступен пункт "**сделать общими**" (**Share**). 
