Update and rename Выполнение задач в Windows по расписанию.md to 10.md

--- a/lectures/10.md
+++ b/lectures/10.md
@@ -1,4 +1,4 @@
-## Выполнение задач в windows по расписанию
+## Выполнение задач в Windows по расписанию
 
 Для регулярного выполнения задач в Windows используется планировщик задач. Он расположен в меню инструменты *менеджера сервера (server manager)* и в разделе администрирование меню *"Пуск"*.
 
